--- a/html檔/Home.html
+++ b/html檔/Home.html
@@ -442,7 +442,7 @@
             /* 使 #V 向左對齊 */
             text-align: left;
             /* 文字靠左 */
-            margin-left: 35%;
+            margin-left: 32%;
             color: #e3e4a9;
         }
 
@@ -751,7 +751,7 @@
         #strbox3 {
             position: absolute;
             bottom: 40%;
-            right: 10%;
+            right: 20%;
             transform: scale(0.8) translateX(100px) translateY(50px);
             /* 初始位置 */
             width: auto;
@@ -1318,7 +1318,7 @@
 
     <section id="s10-2">
         <div id="atama">
-            <h1 id="V">Vesluneir 找攝影</h1>
+            <h1 id="V">VESLUNEIR 找攝影</h1>
         </div>
         <div id="strbox1">
             <img id="str1" src="/img/Star 5.png" alt="Star 5">
@@ -1434,7 +1434,7 @@
             </div>
 
             <div class="h3O" style="width: auto;">
-                <h3 style="color: #fdff6e;">攝影師集散地</h3>
+                <h3 style="color: #f3f574;">攝影師集散地</h3>
             </div>
 
             <article id="article1" class="art1">
@@ -1457,7 +1457,7 @@
         <div class="hr2">
             <hr>
         </div>
-        <section id="mainS" style="color: #fdff6e;">
+        <section id="mainS" style="color: #f3f574;">
             <article id="article2" class="art2">
                 無論是婚禮、個人寫真還是活動攝影，這裡都能找到喜愛的風格。<br>
                 每個攝影師的相簿都是他們最佳作品的展示，能夠快速了解他們的拍攝風格及技術。<br>
@@ -1470,11 +1470,11 @@
                 <img src="/img/album.jpg" alt="image2">
             </div>
 
-            <div class="h3S" style="color: #fdff6e;">
+            <div class="h3S" style="color: #f3f574;">
                 <h3>相簿區</h3>
             </div>
 
-            <a href="LookBook.html" id="btn2" class="btn_02">前往相冊</a>
+            <a href="LookBook.html" id="btn2" class="btn_02">前往相簿</a>
         </section>
 
 
@@ -1491,7 +1491,7 @@
                 <img src="/img/book&camera.jpg" alt="image3">
             </div>
 
-            <div class="h3T" style="color: #fdff6e;">
+            <div class="h3T" style="color: #f3f574;">
                 <h3>文章投稿</h3>
             </div>
 
@@ -1511,7 +1511,7 @@
 
 
         <!-- 第四組內容 -->
-        <div class="h3F" style="color: #fdff6e;">
+        <div class="h3F" style="color: #f3f574;">
             <h3>成為攝影師</h3>
         </div>
         <div class="hr4">
