--- a/html檔/LookBook.html
+++ b/html檔/LookBook.html
@@ -601,7 +601,7 @@
                     <p>攝影師一覽</p>
                 </li>
                 <li>
-                    <a href="LookBook.html">LOOK BOOK</a>
+                    <a href="LookBook.html">PHOTO ALBUM</a>
                     <hr>
                     <p>相簿</p>
                 </li>
@@ -693,7 +693,7 @@
 
             <div class="card" data-album="2">
                 <div class="imgBox">
-                    <img src="/img/photo1_lily/lily11.jpg" alt="Awesome views">
+                    <img src="/img/photo1_lily/lily26.jpg" alt="Awesome views">
                 </div>
                 <div class="tag">
                     <a href="#" id="tagpp">#People</a>
@@ -884,8 +884,8 @@
 
         //相冊
         const albumImages = {
-            1: ["/img/photo1_lily/lily12.jpg", "/img/photo1_lily/lily13.jpg", "/img/photo1_lily/lily14.jpg", "/img/photo1_lily/lily15.jpg", "/img/photo1_lily/lily19.jpg", "/img/photo1_lily/lily7.jpg", "/img/photo1_lily/lily3.jpg", "/img/photo1_lily/lily21.jpg"],
-            2: ["/img/photo3_sophia/so3.jpg", "/img/Lemon.jpg", "/img/tower2.jpeg", "/img/searock.jpg", "/img/moon.JPG"],
+            1: ["/img/photo1_lily/lily12.jpg", "/img/photo1_lily/lily13.jpg", "/img/photo1_lily/lily14.jpg", "/img/photo1_lily/lily15.jpg", "/img/photo1_lily/lily19.jpg", "/img/photo1_lily/lily7.jpg", "/img/photo1_lily/lily3.jpg", "/img/photo1_lily/lily21.jpg","/img/photo1_lily/lily8.jpg", "/img/photo1_lily/lily6.jpg"],
+            2: ["/img/photo1_lily/lily25.jpg", "/img/photo1_lily/lily23.jpg", "/img/photo1_lily/lily24.jpg", "/img/photo1_lily/lily22.jpg", "/img/photo1_lily/lily26.jpg"],
             3: ["/img/photo2_yu/yu1.jpg", "/img/photo2_yu/yu2.jpg", "/img/photo2_yu/yu3.jpg", "/img/photo2_yu/yu4.jpg", "/img/photo2_yu/yu5.jpg", "/img/photo2_yu/yu6.jpg"]
         };
 
