--- a/html檔/Photographer.html
+++ b/html檔/Photographer.html
@@ -128,7 +128,7 @@
             font-weight: 483;
             font-style: normal;
             font-size: 110%;
-            margin-top: 4px;
+            margin-top: 0;
             margin-bottom: 4px;
             /* 調小 margin-bottom，使項目更緊湊 */
             /* padding: 2px 0; */
@@ -695,7 +695,7 @@
                     <p>攝影師集散地</p>
                 </li>
                 <li>
-                    <a href="LookBook.html">LOOK BOOK</a>
+                    <a href="LookBook.html">PHOTO ALBUM</a>
                     <hr>
                     <p>相簿</p>
                 </li>
@@ -782,7 +782,7 @@
                     <p class="photographer-specialty">歲月靜好，現世安穩</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -794,7 +794,7 @@
                     <p class="photographer-specialty">來世我要變有錢人的貓</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -806,7 +806,7 @@
                     <p class="photographer-specialty">無法抵抗毛絨絨患者</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -819,7 +819,7 @@
                         7-11 OK 全家</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -831,7 +831,7 @@
                     <p class="photographer-specialty">好宅好快樂</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -843,7 +843,7 @@
                     <p class="photographer-specialty">Love Yourself</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -855,7 +855,7 @@
                     <p class="photographer-specialty">.</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -866,7 +866,7 @@
                     <p class="photographer-specialty">今天吃得飽，明天就更好</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -877,7 +877,7 @@
                     <p class="photographer-specialty">別煩我</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -888,7 +888,7 @@
                     <p class="photographer-specialty">Coffee makes everything better.</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -900,7 +900,7 @@
                     </p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -911,7 +911,7 @@
                     <p class="photographer-specialty">.</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -922,7 +922,7 @@
                     <p class="photographer-specialty">Sometimes, doing nothing is everything.</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -933,7 +933,7 @@
                     <p class="photographer-specialty">Let things be, not everything needs a reason.</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -944,7 +944,7 @@
                     <p class="photographer-specialty">拍拍日常，記錄不平常</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
@@ -955,7 +955,7 @@
                     <p class="photographer-specialty">Where shadows fall, stories rise.</p>
                     <div class="buttons">
                         <button class="view-portfolio-btn">About</button>
-                        <button class="view-portfolio-btn2"><a href="Booking.html">Booking</a></button>
+                        <button class="view-portfolio-btn2"><a href="Booking.html">預約</a></button>
                     </div>
                 </div>
             </div>
