--- a/html檔/Home.html
+++ b/html檔/Home.html
@@ -1374,8 +1374,8 @@
         </div>
         <div class="s8photo">
             <img class="s8p1" src="/img/photo1_lily/lily24.jpg" alt="圖片1">
-            <img class="s8p2" src="/img/mt.jpg" alt="圖片2">
-            <img class="s8p3" src="/img/photo1_lily/lily7.jpg" alt="圖片3">
+            <img class="s8p2" src="/img/photo1_lily/lily7.jpg" alt="圖片2">
+            <img class="s8p3" src="/img/photo2_yu/yu8.jpg" alt="圖片3">
         </div>
         <div class="text left">
             <p>滿足對攝影的所有需求</p>
@@ -1445,7 +1445,7 @@
                 3. 即時預約：只要填寫表單就能輕鬆預約！<br>
             </article>
 
-            <a href="Photographer copy.html" id="btn3" class="btn_02">前往攝影師專區</a>
+            <a href="Photographer.html" id="btn3" class="btn_02">前往攝影師專區</a>
         </section>
 
 
@@ -1503,7 +1503,7 @@
                 3. 互動與討論<br>
             </article>
 
-            <a href="Article.html" id="btn3" class="btn_02">文章一覽</a>
+            <a href="#" id="btn3" class="btn_02">文章一覽</a>
         </section>
 
         <div id="box"></div>
@@ -1524,7 +1524,7 @@
                 ★ 自由展示作品，與全球攝影師交流<br>
             </article>
 
-            <a href="Login.html" id="btn4" class="btn_02">\加入我們/</a>
+            <a href="#" id="btn4" class="btn_02">\加入我們/</a>
         </section>
 
     </main>
