疑問待解決

--- a/index.html
+++ b/index.html
@@ -357,7 +357,6 @@
             }
         }
 
-
         /* ---------------- 2. 開頭 ----------------------*/
         #s10-1,
         #s10-2 {
@@ -1420,8 +1419,6 @@
                 <!-- <h2 id="S"></h2> -->
             </div>
         </section>
-
-
     </section>
 
     <!--------------------- 6. 介紹網頁(main) --------------------->
@@ -1438,7 +1435,7 @@
             </div>
 
             <div class="h3O" style="width: auto;">
-                <h3 style="color: #f3f574;">攝影師集散地</h3>
+                <h3 style="color: #e3e4a9;">攝影師集散地</h3>
             </div>
 
             <article id="article1" class="art1">
@@ -1461,7 +1458,7 @@
         <div class="hr2">
             <hr>
         </div>
-        <section id="mainS" style="color: #f3f574;">
+        <section id="mainS" style="color: #e3e4a9;">
             <article id="article2" class="art2">
                 無論是婚禮、個人寫真還是活動攝影，這裡都能找到喜愛的風格。<br>
                 每個攝影師的相簿都是他們最佳作品的展示，能夠快速了解他們的拍攝風格及技術。<br>
@@ -1474,7 +1471,7 @@
                 <img src="/img/album.jpg" alt="image2">
             </div>
 
-            <div class="h3S" style="color: #f3f574;">
+            <div class="h3S" style="color: #e3e4a9;">
                 <h3>相簿區</h3>
             </div>
 
@@ -1495,7 +1492,7 @@
                 <img src="/img/book&camera.jpg" alt="image3">
             </div>
 
-            <div class="h3T" style="color: #f3f574;">
+            <div class="h3T" style="color: #e3e4a9;">
                 <h3>文章投稿</h3>
             </div>
 
@@ -1515,7 +1512,7 @@
 
 
         <!-- 第四組內容 -->
-        <div class="h3F" style="color: #f3f574;">
+        <div class="h3F" style="color: #e3e4a9;">
             <h3>成為攝影師</h3>
         </div>
         <div class="hr4">
@@ -1535,7 +1532,7 @@
 
     <!--------------------- 5. 頁尾(footer) --------------------->
 
-    <footer id="footer">
+    <footer id="footer" class="container">
         <div class="footer-section2">
             <ul class="footer-social">
                 <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a></li>
