--- a/index.html
+++ b/index.html
@@ -1252,6 +1252,7 @@
                 </li>
                 <li class="dropdown">
                     <a href="#" class="arrow_r_b2 dropdown-toggle">LOGIN</a>
+                    <!-- href="#" 表示點擊時不跳轉到其他頁面。 -->
                     <hr>
                     <p>註冊／登入</p>
                     <ul class="dropdown-menu">
@@ -1568,6 +1569,8 @@
             nav.classList.toggle('active');
         });
 
+
+        
         //LOGIN下拉選單
         document.addEventListener("DOMContentLoaded", function () {
             const dropdownToggle = document.querySelector(".dropdown-toggle");
@@ -1585,6 +1588,7 @@
                 }
             });
         });
+
 
         //scroll-icon
         document.addEventListener('DOMContentLoaded', function () {
