--- a/LookBook.html
+++ b/LookBook.html
@@ -648,7 +648,7 @@
                 </div>
             </div>
             <div id="logobox">
-                <a href="Home.html">
+                <a href="index.html">
                     <img src="/img/Vesluneir.png">
                 </a>
             </div>
