--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         /* ---------------- 2. 開頭 ----------------------*/
         #s10-1,
         #s10-2 {
-            width: 100%;
+            /* width: 100%; */
             height: auto;
             /* 滾動區域的高度 */
             display: flex;
@@ -368,6 +368,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            border: 2px solid red;
         }
 
         #svg1 path {
@@ -383,6 +384,21 @@
             to {
                 stroke-dashoffset: 0;
                 /* 讓線條顯示出來 */
+            }
+        }
+
+        #s10-1 {
+            height: 250px;
+        }
+
+        #svg1 {
+            /* width: 100%; */
+            height: 10vw;
+        }
+
+        @media screen and (max-width: 600px) {
+            #s10-1 {
+                height: 100px;
             }
         }
 
@@ -1308,7 +1324,12 @@
     <!------------------------ 2. 開頭 ------------------------------>
 
     <section id="s10-1">
-        <svg id="svg1" width="1000" height="250" xmlns="http://www.w3.org/2000/svg">
+        <!-- <svg id="svg1" width="300" height="250" xmlns="http://www.w3.org/2000/svg">
+            <path d="M 10, 20 C 50,10 70,60 110,40" stroke="white" fill="none" stroke-width="2" transform="scale(2)" />
+            <path d="M 110,40 C 140,30 180,90 270,100" stroke="white" fill="none" stroke-width="2"
+                transform="scale(2)" />
+        </svg> -->
+        <svg id="svg1" xmlns="http://www.w3.org/2000/svg">
             <path d="M 10, 20 C 50,10 70,60 110,40" stroke="white" fill="none" stroke-width="2" transform="scale(2)" />
             <path d="M 110,40 C 140,30 180,90 270,100" stroke="white" fill="none" stroke-width="2"
                 transform="scale(2)" />
@@ -1560,6 +1581,7 @@
                 return false;
             });
         });
+
         // 切換 active class
         const btn = document.getElementById('btn03');
         const nav = document.getElementById('nav');
