--- a/home.html
+++ b/home.html
@@ -25,6 +25,31 @@
         document.body.appendChild(newHeader);
 
 
+        // 獲取 canvas 元素與上下文
+        // const canvas = document.getElementById('gridCanvas');
+        // const ctx = canvas.getContext('2d');
+
+        // // 設定格線大小
+        // const gridSize = 200; // 每格 50px
+
+        // // 繪製垂直線
+        // for (let x = 0; x <= canvas.width; x += gridSize) {
+        //     ctx.beginPath();
+        //     ctx.moveTo(x, 0); // 起點 (x, 0)
+        //     ctx.lineTo(x, canvas.height); // 終點 (x, canvas 高度)
+        //     ctx.strokeStyle = '#ccc'; // 線條顏色
+        //     ctx.stroke();
+        // }
+
+        // // 繪製水平線
+        // for (let y = 0; y <= canvas.height; y += gridSize) {
+        //     ctx.beginPath();
+        //     ctx.moveTo(0, y); // 起點 (0, y)
+        //     ctx.lineTo(canvas.width, y); // 終點 (canvas 寬度, y)
+        //     ctx.strokeStyle = '#ccc'; // 線條顏色
+        //     ctx.stroke();
+        // }
+
     </script>
 </body>
 
