--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
-            border: 2px solid red;
+            /* border: 2px solid red; */
         }
 
         #svg1 path {
